<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bmrScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.bmr.BmrFragment">

    <RadioGroup
        android:id="@+id/bmrRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/womanRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/woman_radio_text" />

        <RadioButton
            android:id="@+id/manRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/man_radio_text" />
    </RadioGroup>

    <EditText
        android:id="@+id/ageEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/age_edittext"
        android:importantForAutofill="noExcludeDescendants"
        android:inputType="numberDecimal"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/bmrTextView"
        android:layout_width="match_parent"
        android:minHeight="48dp"
        android:layout_height="wrap_content"
        android:text="@string/bmi_value"
        android:textSize="32sp"
        />

</LinearLayout>