<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bmiScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.bmi.BmiFragment" >

    <EditText
        android:id="@+id/weightEditText"
        android:layout_width="match_parent"
        android:minHeight="48dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:importantForAutofill="noExcludeDescendants"
        android:hint="@string/enter_weight"
        android:focusable="true"
        android:focusableInTouchMode="true"
        />

    <EditText
        android:id="@+id/heightEditText"
        android:layout_width="match_parent"
        android:minHeight="48dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:importantForAutofill="noExcludeDescendants"
        android:hint="@string/enter_height"
        android:focusable="true"
        android:focusableInTouchMode="true"
        />

    <TextView
        android:id="@+id/bmiTextView"
        android:layout_width="match_parent"
        android:minHeight="48dp"
        android:layout_height="wrap_content"
        android:text="@string/bmi_value"
        android:textSize="32sp"
        />
</LinearLayout>