<resources>
    <string name="app_name">BmiExt</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_bmi">BMI</string>
    <string name="menu_bmr">BMR</string>
    <string name="menu_recipes">Recipes</string>
    <string name="menu_list">Shopping list</string>

    <string name="enter_weight">Enter weight (kg)</string>
    <string name="enter_height">Enter Height (cm)</string>
    <string name="bmi_value">0.0</string>

    <string name="woman_radio_text">Woman</string>
    <string name="man_radio_text">Man</string>
    <string name="age_edittext">Enter age</string>
    <string name="bmr_result">BMR result: %s</string>

    <string name="bmi_invalid_input">Enter both weight and height</string>
    <string name="weight_invalid_input">Wrong weight format</string>
    <string name="height_invalid_input">Wrong height format</string>
    <string name="age_invalid_input">Enter valid age</string>
    <string name="bmr_invalid_input">Calc BMI first and fill all fields here</string>
    <string name="bmr_select_sex">Select sex</string>

    <string name="no_recipes_available">There are no recipes available.</string>
    <string name="recipe_ingredients_text">Ingredients</string>
    <string name="recipe_instructions_text">Instructions</string>

    <string name="recipe_no_bmr">Please enter your BMR details first.</string>
    <string name="recipe_image_content_description">Photo of a meal</string>

    <string name="shopping_list_item_name">Item name</string>
    <string name="menu_bmi_chart">BMI Chart</string>
</resources>