<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_bmi"
            android:icon="@drawable/monitor_weight_24"
            android:title="@string/menu_bmi" />
        <item
            android:id="@+id/nav_bmr"
            android:icon="@drawable/outline_calculate_24"
            android:title="@string/menu_bmr" />
        <item
            android:id="@+id/nav_recipes"
            android:icon="@drawable/skillet_24"
            android:title="@string/menu_recipes" />
        <item
            android:id="@+id/nav_shopping_list"
            android:icon="@drawable/grocery_24dp"
            android:title="@string/menu_list" />
        <item
            android:id="@+id/nav_bmi_chart"
            android:icon="@drawable/outline_multiline_chart_24"
            android:title="@string/menu_bmi_chart" />
    </group>
</menu>